@@ -138,7 +138,7 @@ public class FacetsConfig {
                 
                 if (!facetNode.getAttributes( "show-on-more-than" ).isEmpty()) {
                     Node subNode = (Node) facetNode.getAttributes( "show-on-more-than" ).get( 0 );
-                    ingridFacet.setShowOnMoreThan( new Integer(subNode.getValue().toString()) );
+                    ingridFacet.setShowOnMoreThan( Integer.valueOf(subNode.getValue().toString()) );
                 }
                 
                 if (!facetNode.getChildren( "query" ).isEmpty()) {
